Fix report button alignment

--- a/imports/ui/css/RecentReview.css
+++ b/imports/ui/css/RecentReview.css
@@ -30,7 +30,7 @@
 }
 
 #button_text{
-  float: right;
+  /* float: right; */
 }
 
 .reviewNumbersMargin{
