--- a/imports/ui/css/Review.css
+++ b/imports/ui/css/Review.css
@@ -50,7 +50,7 @@
 }
 
 #button_text {
-  /* padding-left: 0; */
+  padding-left: 0;
   color: #4a4a4a;
   font-size: 14px;
   opacity: 0.35;
